[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drt"
version = "0.1.0"
description = "Distributed Robot Teleoperation Platform"
readme = "README.md"
authors = [
    {name = "Teleop Team"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
    "pydantic",
    "numpy",
    "opencv-python",
    "mujoco",
    "requests",
]

[project.scripts]
drt-server = "server.teleop_server:main"
drt-client = "client.keyboard_client:main"
